--- a/index.html
+++ b/index.html
@@ -65,6 +65,17 @@
 			top: -30px;
 			left: -30px;
 		}
+
+		.imprint {
+			position: absolute;
+			bottom: 5px;
+			right: 5px;
+			font-size: 11px;
+		}
+
+		.imprint a {
+			color: gray;
+		}
 	</style>
 	<link href='http://fonts.googleapis.com/css?family=Leckerli+One|Pacifico' rel='stylesheet' type='text/css'>
 </head>
@@ -81,5 +92,16 @@
 			</ul>
 		</div>
 	</div>
+	<div class="imprint"><a href="http://www.fbrandel.de">Kontakt</a></div>
+	<script>
+	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+	ga('create', 'UA-220075-15', 'auto');
+	ga('send', 'pageview');
+
+	</script>
 </body>
 </html>
