--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 			<span class="star">*</span>
 			<ul>
 				<li>
-					<strong>Amazon</strong>: <a href="http://www.zeit.de/wirtschaft/unternehmen/2014-10/amazon-streik-leipzig-hersfeld">Amazon-Mitarbeiter streiken an fünf Standorten</a>
+					<strong>Amazon</strong>: <a href="http://www.zeit.de/wirtschaft/2014-10/amazon-streik">Amazon-Mitarbeiter verlängern Streiks</a>
 				</li>
 			</ul>
 		</div>
