--- a/index.html
+++ b/index.html
@@ -87,6 +87,9 @@
 			<span class="star">*</span>
 			<ul>
 				<li>
+					<strong>Deutsche Bahn</strong>: <a href="http://www.zeit.de/mobilitaet/2014-11/lokfuehrer-wollen-von-mittwoch-bis-montagmorgen-streiken">Lokführer streiken ab Mittwoch vier Tage</a>
+				</li>
+				<li>
 					<strong>Amazon</strong>: <a href="http://www.zeit.de/wirtschaft/2014-10/amazon-streik">Amazon-Mitarbeiter verlängern Streiks</a>
 				</li>
 			</ul>
