--- a/index.html
+++ b/index.html
@@ -82,8 +82,9 @@
 <body>
 	<div class="wrapper">
 		<div class="question">Wird gestreikt?</div>
-		<div class="answer">Ja<sup class="star">*</sup></div>
-		<div class="details">
+		<div class="answer" style="display:none;">Ja<sup class="star">*</sup></div>
+		<div class="answer">Nein</div>
+		<div class="details" style="display: none;">
 			<span class="star">*</span>
 			<ul>
 				<li>
