--- a/index.html
+++ b/index.html
@@ -56,6 +56,10 @@
 			color: gray;
 		}
 
+		.details li {
+			padding-bottom: 12px;
+		}
+
 		.details a {
 			color: gray;
 		}
@@ -82,16 +86,16 @@
 <body>
 	<div class="wrapper">
 		<div class="question">Wird gestreikt?</div>
-		<div class="answer" style="display:none;">Ja<sup class="star">*</sup></div>
-		<div class="answer">Nein</div>
-		<div class="details" style="display: none;">
+		<div class="answer">Ja<sup class="star">*</sup></div>
+		<div class="answer" style="display:none;">Nein</div>
+		<div class="details">
 			<span class="star">*</span>
 			<ul>
 				<li>
-					<strong>Deutsche Bahn</strong>: <a href="http://www.zeit.de/mobilitaet/2014-11/lokfuehrer-wollen-von-mittwoch-bis-montagmorgen-streiken">Lokführer streiken ab Mittwoch vier Tage</a>
+					<strong>Lufthansa</strong> (02.12.2014):<br><a href="http://www.zeit.de/mobilitaet/2014-12/lufthansa-streik-langstrecke">Lufthansa-Piloten weiten ihren Streik aus</a>
 				</li>
 				<li>
-					<strong>Amazon</strong>: <a href="http://www.zeit.de/wirtschaft/2014-10/amazon-streik">Amazon-Mitarbeiter verlängern Streiks</a>
+					<strong>Lufthansa</strong> (01.12.2014):<br><a href="http://www.zeit.de/mobilitaet/2014-12/lufthansa-streik-flugausfaelle">Lufthansa sagt jeden zweiten Flug ab</a>
 				</li>
 			</ul>
 		</div>
