--- a/index.html
+++ b/index.html
@@ -92,10 +92,10 @@
 			<span class="star">*</span>
 			<ul>
 				<li>
-					<strong>Lufthansa</strong> (02.12.2014):<br><a href="http://www.zeit.de/mobilitaet/2014-12/lufthansa-streik-langstrecke">Lufthansa-Piloten weiten ihren Streik aus</a>
-				</li>
-				<li>
-					<strong>Lufthansa</strong> (01.12.2014):<br><a href="http://www.zeit.de/mobilitaet/2014-12/lufthansa-streik-flugausfaelle">Lufthansa sagt jeden zweiten Flug ab</a>
+					<strong>Lufthansa</strong><br>
+					(02.12.2014) <a href="http://www.zeit.de/mobilitaet/2014-12/lufthansa-streik-langstrecke">Lufthansa-Piloten weiten ihren Streik aus</a><br>
+
+					(01.12.2014) <a href="http://www.zeit.de/mobilitaet/2014-12/lufthansa-streik-flugausfaelle">Lufthansa sagt jeden zweiten Flug ab</a>
 				</li>
 			</ul>
 		</div>
