--- a/index.html
+++ b/index.html
@@ -86,18 +86,11 @@
 <body>
 	<div class="wrapper">
 		<div class="question">Wird gestreikt?</div>
-		<div class="answer">Ja<sup class="star">*</sup></div>
-		<div class="answer" style="display:none;">Nein</div>
-		<div class="details">
+		<div class="answer" style="display:none;">Ja<sup class="star">*</sup></div>
+		<div class="answer">Nein</div>
+		<div class="details" style="display:none;">
 			<span class="star">*</span>
-			<ul>
-				<li>
-					<strong>Lufthansa</strong><br>
-					(02.12.2014) <a href="http://www.zeit.de/mobilitaet/2014-12/lufthansa-streik-langstrecke">Lufthansa-Piloten weiten ihren Streik aus</a><br>
-
-					(01.12.2014) <a href="http://www.zeit.de/mobilitaet/2014-12/lufthansa-streik-flugausfaelle">Lufthansa sagt jeden zweiten Flug ab</a>
-				</li>
-			</ul>
+			
 		</div>
 	</div>
 	<div class="imprint"><a href="http://www.fbrandel.de">Kontakt</a></div>
