--- a/index.html
+++ b/index.html
@@ -86,11 +86,16 @@
 <body>
 	<div class="wrapper">
 		<div class="question">Wird gestreikt?</div>
-		<div class="answer" style="display:none;">Ja<sup class="star">*</sup></div>
-		<div class="answer">Nein</div>
-		<div class="details" style="display:none;">
+		<div class="answer">Ja<sup class="star">*</sup></div>
+		<div class="answer" style="display:none;">Nein</div>
+		<div class="details">
 			<span class="star">*</span>
-			
+			<ul>
+				<li>
+					<strong>Deutsche Bahn</strong> (21.04.2015):<br>
+					<a href="http://www.zeit.de/wirtschaft/2015-04/deutsche-bahn-lokfuehrer-streiken-ab-dienstag">Lokführer streiken ab Dienstag</a>
+				</li>
+			</ul>
 		</div>
 	</div>
 	<div class="imprint"><a href="http://www.fbrandel.de">Kontakt</a></div>
