--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 	</style>
 	<link href='http://fonts.googleapis.com/css?family=Leckerli+One|Pacifico' rel='stylesheet' type='text/css'>
 </head>
-<body class="no">
+<body class="yes">
 	<div class="wrapper">
 		<div class="question">Wird gestreikt?</div>
 		<div class="answer answer--yes">Ja<sup class="star">*</sup></div>
@@ -104,8 +104,8 @@
 			<span class="star">*</span>
 			<ul>
 				<li>
-					<strong>Deutsche Bahn</strong> (21.04.2015):<br>
-					<a href="http://www.zeit.de/wirtschaft/2015-04/deutsche-bahn-lokfuehrer-streiken-ab-dienstag">Lokführer streiken ab Dienstag</a>
+					<strong>Deutsche Bahn</strong> (04.05.2015):<br>
+					<a href="http://www.bahn.de/blitz/view/fernverkehr/uebersicht.shtml">Streik GDL - Züge DB Fernverkehr verkehren nach besonderem Fahrplan vom 05. bis 10. Mai 2015</a>
 				</li>
 			</ul>
 		</div>
