--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
 			<span class="star">*</span>
 			<ul>
 				<li>
-					<strong>Deutsche Bahn</strong> (04.05.2015):<br>
-					<a href="http://www.bahn.de/blitz/view/fernverkehr/uebersicht.shtml">Streik GDL - Züge DB Fernverkehr verkehren nach besonderem Fahrplan vom 05. bis 10. Mai 2015</a>
+					<strong>Kindertagesstätten</strong> (11.05.2015):<br>
+					<a href="http://www.zeit.de/video/2015-05/4229627409001/tarifkonflikt-kita-beschaeftigte-streiken-bundesweit#autoplay">Kita-Beschäftigte streiken bundesweit</a>
 				</li>
 			</ul>
 		</div>
