--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 			<ul>
 				<li>
 					<strong>Deutsche Bahn</strong> (18.05.2015):<br>
-					<a href="http://www.zeit.de/wirtschaft/2015-05/gdl-kuendigt-lokfuehrer-streik-ab-dienstag-an">Der Güterverkehr wird ab Dienstag, 19.05. ab 15 Uhr, und der Personenverkehr ab Mittwoch, 20.05. ab 02 Uhr bestreikt - Ende noch offen.</a>
+					<a href="http://www.bahn.de/p/view/home/info/streik_gdl_150519.shtml">Der Güterverkehr wird ab Dienstag, 19.05. ab 15 Uhr, und der Personenverkehr ab Mittwoch, 20.05. ab 02 Uhr bestreikt - Ende noch offen.</a>
 				</li>
 				<li>
 					<strong>Kindertagesstätten</strong> (11.05.2015):<br>
