--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
 			<span class="star">*</span>
 			<ul>
 				<li>
-					<strong>Kindertagesstätten</strong> (11.05.2015):<br>
-					<a href="http://www.zeit.de/video/2015-05/4229627409001/tarifkonflikt-kita-beschaeftigte-streiken-bundesweit#autoplay">Kita-Beschäftigte streiken bundesweit</a>
+					<strong>Deutsche Post</strong> (08.06.2015):<br>
+					<a href="http://www.zeit.de/wirtschaft/2015-06/post-beschaeftigte-streiken-unbefristet">Post-Beschäftigte streiken unbefristet</a>
 				</li>
 			</ul>
 		</div>
