Always default to "ja"

--- a/index.html
+++ b/index.html
@@ -98,17 +98,8 @@
 <body class="yes">
 	<div class="wrapper">
 		<div class="question">Wird gestreikt?</div>
-		<div class="answer answer--yes">Ja<sup class="star">*</sup></div>
+		<div class="answer answer--yes">Ja</div>
 		<div class="answer answer--no">Nein</div>
-		<div class="details">
-			<span class="star">*</span>
-			<ul>
-				<li>
-					<strong>Deutsche Post</strong> (08.06.2015):<br>
-					<a href="http://www.zeit.de/wirtschaft/2015-06/post-beschaeftigte-streiken-unbefristet">Post-Beschäftigte streiken unbefristet</a>
-				</li>
-			</ul>
-		</div>
 	</div>
 	<div class="imprint"><a href="http://www.fbrandel.de">Kontakt</a></div>
 	<script>
